# mysql-sp-extractor

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
mysql_sp_extractor/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
